# amazon-creators-async

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRICE_STRUCTURE.md  QUICK_START.md  README.md  debug_response.py  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: auto-pr.yml  autoformat.yml  publish.yml  tests.yml
amazon_creators_async/: __init__.py  auth.py  client.py  limiter.py  resources.py  utils.py
amazon_creators_async/models/: requests.py  responses.py
amazon_creators_async_api/: __init__.py  client.py  exceptions.py  limiter.py  resources.py  utils.py
amazon_creators_async_api/models/: __init__.py  responses.py
docs/memory-bank/: 00-overview.md  01-architecture.md  02-components.md  03-tech-context.md  04-active-context.md  05-progress-log.md
docs/memory-bank/_notes/: _index.md
docs/memory-bank/_tasks/: _index.md
scripts/: bump_version.py  finalize_changelog.py
tests/: test_auth_limiter_unit.py  test_client_unit.py
