[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-creators-async-api"
version = "1.0.1"
description = "A modern, high-performance asynchronous Python wrapper for the new Amazon Creators API (OAuth 2.0 based)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "OfertaChina", email = "contato@ofertachina.com.br" }
]
keywords = ["amazon", "creators", "api", "affiliate", "async", "httpx", "oauth2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "aiolimiter>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/ils15/amazon-creators-async-api"
Repository = "https://github.com/ils15/amazon-creators-async-api.git"
"Bug Tracker" = "https://github.com/ils15/amazon-creators-async-api/issues"
"Contact" = "https://ofertachina.com.br/contato"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

